style: fixed main wrapper misalign

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,8 @@
+
+.spacer {
+  height: 3rem;
+  width: 100%;
+}
 .form-wrapper {
   display: flex;
   justify-content: center;
